crates/rome_js_formatter/tests/specs/prettier/js/decorator-auto-accessors/static.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
expression: static.js
---
# Input
```js
class Foo {
  static accessor bar;
}

```

# Output
```js
class Foo {
  static accessor;
  bar;
}

```

# Errors
```
error[SyntaxError]: expected a semicolon to end the class property, but found none
  ┌─ static.js:2:3
  │
2 │   static accessor bar;
  │   ^^^^^^^^^^^^^^^


```


